# chronoguard-lite

./: .gitignore  CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: ci.yml
benchmarks/: conftest.py  run_all.py
src/chronoguard_lite/: __init__.py  cli.py
src/chronoguard_lite/analytics/: __init__.py  bloom.py  countmin.py  engine.py  hyperloglog.py
src/chronoguard_lite/concurrency/: __init__.py  coarse_lock_store.py  concurrent_audit_log.py  concurrent_policy_cache.py  rwlock.py  striped_map.py
src/chronoguard_lite/crypto/: __init__.py  chain.py  hasher.py  verifier.py
src/chronoguard_lite/domain/: __init__.py  agent.py  audit.py  decisions.py  memory_analysis.py  policy.py  types.py
src/chronoguard_lite/graph/: __init__.py  adjacency.py  critical_path.py  cycle_detector.py  policy_engine.py  topological.py
src/chronoguard_lite/interceptor/: __init__.py  (+5 more)
tests/: conftest.py
tests/ch01/: test_agent.py  test_audit.py  test_decisions.py  test_memory.py  test_policy.py
tests/ch02/: conftest.py  test_cache_benchmark.py  test_columnar_store.py  test_naive_store.py  test_range_queries.py
tests/ch03/: conftest.py  test_evaluator.py  test_gil_benchmark.py  test_protocol.py  test_threaded_interceptor.py
tests/ch04/: test_concurrency_benchmark.py  test_concurrent_audit_log.py  test_concurrent_policy_cache.py  test_rwlock.py  test_striped_map.py
tests/ch05/: conftest.py  test_async_interceptor.py  test_async_protocol.py  test_threaded_vs_async_benchmark.py
tests/ch06/: conftest.py  test_chain.py  test_hash_benchmark.py  test_hasher.py  test_tamper_detection.py  test_verifier.py
tests/ch07/: conftest.py  test_accuracy_benchmark.py  test_bloom.py  test_countmin.py  test_engine.py  test_hyperloglog.py
tests/ch08/: conftest.py  test_aho_corasick.py  test_domain_matcher.py  test_inverted_index.py  test_search_engine.py  test_string_benchmark.py  test_trie.py
tests/ch09/: conftest.py  test_adjacency.py  test_critical_path.py  test_cycle_detector.py  test_graph_benchmark.py  test_policy_engine.py  test_topological.py
tests/ch10/: conftest.py  test_harness.py  test_load_generator.py  test_optimization_benchmark.py
(+15 files in other folders)
