[project]
name = "chronoguard-lite"
version = "0.1.0"
description = "ChronoGuard Lite is an agent compliance monitor. It intercepts and logs every external request an AI agent (or any HTTP client) makes, enforces time-based access policies, maintains a tamper-proof audit trail, and provides analytics — all in pure Python with zero infrastructure dependencies."
readme = "README.md"
authors = [
    { name = "Jayasimha Raghavan", email = "mr.jayasimha@gmail.com" }
]
requires-python = ">=3.12"
dependencies = []

[build-system]
requires = ["uv_build>=0.10.2,<0.11.0"]
build-backend = "uv_build"
